Fixed button on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,7 @@ body {
 .btn:hover { transform: scale(1.1) }
 
 .resume-btn {
-  margin-top: 1em;;
-  position: absolute;
+  margin-top: 1.5em;
 }
 
 /* Typography */
